<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyLitePal</string>
    <string name="hello_world">开始读取并存储本地数据库</string>
    <string name="title_activity_arthur_show">ArthurShowActivity</string>
    <string name="action_settings">Settings</string>
    <string name="Arthur">Hello,Arthur!</string>
    <string name="please_input_search_content">请输入查询内容</string>
    <string name="sure">确定</string>
    <string name="costomview">自定义View</string>
    <string name="action_search">搜索</string>
    <string name="content_description">图片</string>
    <string name="please_input_keyword">请输入密码</string>
    <string name="search">搜索</string>
    <string name="lock_cancel">取消</string>
    <string name="lock_ok">确定</string>
    <string name="lock_clear">清除</string>
    <string name="lock_backspace">回退</string>
    <string name="lock_restore">恢复默认</string>
    <string name="lock_color_saturation">饱和度</string>
    <string name="lock_color_opacity">透明度</string>
    <string name="lock_font_color">字体颜色</string>

</resources>