<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/business_transprent" >

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/business_search_transprent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/view_margin" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/simple_dialog_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_key_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_padding"
                android:layout_marginStart="@dimen/layout_padding"
                android:background="@null"
                android:hint="@string/please_input_keyword"
                android:inputType="text"
                android:padding="@dimen/view_margin"
                android:textColor="@color/text_normal_black"
                android:textColorHint="@color/gray_white" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:text="@string/search"
            android:textColor="@color/text_normal_black" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_title"
        android:onClick="onTransprentClick" >

        <com.symagic.views.RippleView
            android:id="@+id/rv_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/layout_padding"
            android:onClick="onGreenClick"
            ripple:rv_type="rectangle"
            ripple:rv_zoom="true" >

            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@android:color/holo_green_light"
                android:onClick="onSureClick"
                android:padding="@dimen/layout_padding"
                android:text="@string/sure"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_large_23" />
        </com.symagic.views.RippleView>
    </RelativeLayout>

</RelativeLayout>