<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@+id/lv_city"
        android:layout_width="match_parent"
        android:layout_height="100dip" >
    </ListView>

    <android.gesture.GestureOverlayView
        android:id="@+id/gestureOverlayView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lv_city" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity" >

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="CheckBox" />

            <TextView
                android:id="@+id/tv_hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkBox1"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:onClick="onTextClick"
                android:text="@string/hello_world"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_hello"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/modify_info_margin"
                android:paddingRight="@dimen/modify_info_margin" >

                <EditText
                    android:id="@+id/et_content"
                    android:layout_width="200dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:hint="@string/please_input_search_content"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_white"
                    android:textSize="16sp" />

                <com.symagic.views.RippleView
                    android:id="@+id/rv_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ripple:rv_type="rectangle"
                    ripple:rv_zoom="true" >

                    <TextView
                        android:id="@+id/tv_sure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_green_light"
                        android:onClick="onSureClick"
                        android:padding="@dimen/layout_padding"
                        android:text="@string/sure"
                        android:textColor="@color/text_white" />
                </com.symagic.views.RippleView>

                <!--
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginStart="10dip"
                    android:background="@drawable/btn_common"
                    android:onClick="onSureClick"
                    android:text="@string/sure"
                    android:textColor="@color/text_white"
                    android:textSize="18sp" />                -->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_hello"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="@dimen/modify_info_margin"
                android:paddingRight="@dimen/modify_info_margin" >
            </LinearLayout>
        </RelativeLayout>
    </android.gesture.GestureOverlayView>

</RelativeLayout>